Tue Feb 17 05:41:08 2009  Koichi Sasada  <ko1@atdot.net>

	* compile.c: fix to add "ensure" codes across "while" clause
	  before "return" expression.  [ruby-dev:37967]

	* bootstraptest/test_flow.rb: add a test.

Tue Feb 17 01:53:35 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: generate rb_define_const directly for
	  rdoc.

	* ext/.document: add socket/constdefs.c.

	* ext/socket/constants.c (sock_define_const): removed.
	  (sock_define_uconst): ditto.
	  (rb_mSockConst): new static variable.

Mon Feb 16 23:14:51 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal) [OpenBSD]: don't remove
	  the last padding to prevent sendmsg failure in test_udp_server in
	  test/socket/test_socket.rb on OpenBSD 4.4.

Mon Feb 16 21:59:32 2009  Alexander Zavorine  <alexandre.zavorine@nokia.com>

	* symbian/setup: Update Symbian config to match recent changes in missing/alloca.c

Mon Feb 16 17:04:14 2009  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_scan_args), README.EXT, README.EXT.ja: Add support
	  for specifying the number of the trailing mandatory arguments.
	  Update the documents accordingly. [ruby-dev:37995]

Mon Feb 16 16:46:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* debug.c (set_debug_option): added rtc_error option.

	* win32/Makefile.sub (CRTDEFFLAGS): separated from DEFS.

	* win32/win32.c (rtc_error_handler): ignores RTC errors unless
	  rtc_error debug option is given.

	* win32/win32.c (rb_w32_sysinit): suppress useless CRT assertions.
	  [ruby-core:22116]

Sun Feb 15 21:43:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (OpenStruct#new_ostruct_member): checks if frozen.
	  [ruby-talk:328195], [ruby-core:22142]

Sun Feb 15 21:22:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (Test::Unit::Assertions): aliases
	  assert_not_ methods.

Sun Feb 15 16:57:35 2009  Tanaka Akira  <akr@fsij.org>
