@@ -1,3 +1,8 @@
+Tue Feb 17 12:50:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_str_shared_replace): no need for
+	  str_make_independent.
+
 Tue Feb 17 05:41:08 2009  Koichi Sasada  <ko1@atdot.net>
 
 	* compile.c: fix to add "ensure" codes across "while" clause
